# ODE-solvers

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cc  output.txt
config/: config.json
doc/html/: _abstract_ode_solver_8h.html  _abstract_ode_solver_8h_source.html  _adams_bashforth_solver_8h.html  _adams_bashforth_solver_8h_source.html  _backward_euler_solver_8h.html  _backward_euler_solver_8h_source.html  _butcher_tableau_8h.html  _butcher_tableau_8h_source.html  _config_parser_8h.html  _config_parser_8h_source.html  _example_r_h_s_8h.html  _example_r_h_s_8h_source.html  _explicit_multi_step_solver_8h.html  _explicit_multi_step_solver_8h_source.html  _explicit_single_step_solver_8h.html  _explicit_single_step_solver_8h_source.html  _explicit_solver_8h.html  _explicit_solver_8h_source.html  _forward_euler_solver_8h.html  _forward_euler_solver_8h_source.html  _implicit_solver_8h.html  _implicit_solver_8h_source.html  _known_derivative_r_h_s_8h.html  _known_derivative_r_h_s_8h_source.html  _model_problem_r_h_s_8h_source.html  _o_d_e_right_hand_side_8h.html  _o_d_e_right_hand_side_8h_source.html  _polynomial_r_h_s_8h_source.html  _runge_kutta_solver_8h.html  _runge_kutta_solver_8h_source.html  _solver_factory_8h.html  _solver_factory_8h_source.html  _unknown_derivative_r_h_s_8h.html  _unknown_derivative_r_h_s_8h_source.html  annotated.html  class_abstract_ode_solver-members.html  class_abstract_ode_solver.html  class_adams_bashforth_solver-members.html  class_adams_bashforth_solver.html  class_backward_euler_solver-members.html  (+372 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  (+60 more)
doc/latex/: _abstract_ode_solver_8h.tex  _abstract_ode_solver_8h_source.tex  _adams_bashforth_solver_8h.tex  _adams_bashforth_solver_8h_source.tex  _backward_euler_solver_8h.tex  _backward_euler_solver_8h_source.tex  _butcher_tableau_8h.tex  _butcher_tableau_8h_source.tex  _config_parser_8h.tex  _config_parser_8h_source.tex  _example_r_h_s_8h.tex  _example_r_h_s_8h_source.tex  _explicit_multi_step_solver_8h.tex  _explicit_multi_step_solver_8h_source.tex  _explicit_single_step_solver_8h.tex  _explicit_single_step_solver_8h_source.tex  _explicit_solver_8h.tex  _explicit_solver_8h_source.tex  _forward_euler_solver_8h.tex  _forward_euler_solver_8h_source.tex  _implicit_solver_8h.tex  _implicit_solver_8h_source.tex  _known_derivative_r_h_s_8h.tex  _known_derivative_r_h_s_8h_source.tex  _model_problem_r_h_s_8h_source.tex  _o_d_e_right_hand_side_8h.tex  _o_d_e_right_hand_side_8h_source.tex  _polynomial_r_h_s_8h_source.tex  _runge_kutta_solver_8h.tex  _runge_kutta_solver_8h_source.tex  _solver_factory_8h.tex  _solver_factory_8h_source.tex  _unknown_derivative_r_h_s_8h.tex  _unknown_derivative_r_h_s_8h_source.tex  annotated.tex  class_abstract_ode_solver.eps  class_abstract_ode_solver.tex  class_adams_bashforth_solver.eps  class_adams_bashforth_solver.tex  class_backward_euler_solver.eps  (+203 more)
include/: AbstractOdeSolver.h  AdamsBashforthSolver.h  BackwardEulerSolver.h  ButcherTable.h  ButcherTableau.h  ConfigParser.h  ExampleRHS.h  ExplicitMultiStepSolver.h  ExplicitSingleStepSolver.h  ExplicitSolver.h  ForwardEulerSolver.h  ImplicitSolver.h  KnownDerivativeRHS.h  ModelProblemRHS.h  ODERightHandSide.h  PolynomialRHS.h  RungeKuttaSolver.h  SolverFactory.h  UnknownDerivativeRHS.h  UserDefinedRHS.h  utils.h
src/: AbstractOdeSolver.cc  AdamsBashforthSolver.cc  BackwardEulerSolver.cc  BackwardEulerSolver.cpp  ConfigParser.cc  ExampleRHS.cc  ExplicitMultiStepSolver.cc  ForwardEulerSolver.cc  ImplicitSolver.cpp  KnownDerivativeRHS.cc  KnownDerivativeRHS.cpp  ModelProblemRHS.cc  ModelProblemRHS.cpp  ODERightHandSide.cpp  PolynomialRHS.cc  RungeKuttaSolver.cc  SolverFactory.cc  UnknownDerivativeRHS.cc  UnknownDerivativeRHS.cpp  UserDefinedRHS.cc  main.cc
test/: auxiliary_test.cc  auxiliary_test.cpp  model_problem_test.cc  model_problem_test.cpp  polynomial_test.cc  test.cc
